<resources>
    <string name="app_name">Roomies</string>
    <string name="title_activity_2">Planning</string>
    <string name="title_activity_3">Liste des courses</string>
    <string name="title_activity_4">Dépenses</string>
    <string name="title_activity_5">ScoreBoard</string>
    <string name="title_activity_6">A propos</string>
    <string name="label_welcome">Bienvenue dans Roomies !</string>
    <string name="text_welcome">Cette application vous aidera à vous organiser dans votre colocation.</string>
    <string name="text_welcome">Cette application vous aidera à vous organiser.</string>
    <string name="a5_button_add_personnes">Ajout</string>
    <string name="a5_button_add_point">+</string>
    <string name="a5_button_less_personnes">Supp</string>
    <string name="a5_button_less_point">-</string>
    <string name="a5_text_name_entry">Nom :</string>
    <string name="a5_text_score">Score :</string>
    <string name="a5_text_edit">...</string>
</resources>
